# xstate-python

./: .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  package-lock.json  package.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  to_scxml.py  viz.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pull_request.yaml  release.yaml
examples/: actions.py  basic.py  substates.py  ui.py
tests/: test_actions.py  test_algorithm.py  test_history.py  test_machine.py  test_scxml.py  test_state.py  test_state_in.py  utils_for_tests.py
xstate/: __init__.py  action.py  action_types.py  algorithm.py  constants.py  environment.py  event.py  interpreter.py  machine.py  scxml.py  state.py  state_node.py  transition.py  types.py  utils.py
