[metadata]
name = xstate
version = 0.0.1
description = XState for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = David Khourshid
author_email = davidkpiano@gmail.com
url = https://github.com/davidkpiano/xstate-python
license = MIT
keywords = Answer Set Programming, wrapper, clingo
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = xstate
install_requires =
    ipython>=6
    nbformat>=4
    nbconvert>=5
    requests>=2
